[tool.uv]
link-mode = "copy"  # Avoid hardlink warnings on Windows/OneDrive

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project]
name = "MLIR_WP"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"  # Restrict to 3.12 due to numpy 2.x compatibility 
dependencies = [
    "pip==25.1.1",
    "psutil==7.0.0",
    "requests==2.32.4",
    "python-dotenv==1.1.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.7",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "pinecone==6.0.0",
    "langchain>=0.3.26,<1.0.0",
    "pyreadline3==3.5.4",
    "exa-py>=1.0.7,<2.0.0", # Exa AI - latest stable 1.0.7, allows minor updates
    "google-search-results>=2.4.2,<3.0.0", # SerpAPI - latest 2.4.2, legacy but stable
    "requests>=2.32.0,<3.0.0", # HTTP library - latest 2.32.5, widely used
    "multidict>=6.1.0,<6.5.0",
    "langchain-community>=0.3.26,<=0.3.28",
    "playwright>=1.57.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "chromium>=0.0.0",
    "pypdf>=6.6.0",
    "openai>=2.14.0",
    "pdfplumber>=0.11.9",
    #"psycopg2>=2.9.0,<3.0.0",  # PostgreSQL adapter
    "numpy>=1.20.0,<2.0.0",  # Numerical computing
    "torch>=2.2.0,<2.7.0",  # PyTorch CPU-only for RNN/LSTM/GRU
    "tensorflow-cpu>=2.15.0,<2.18.0",  # TensorFlow CPU-only
    "keras>=3.0.0,<4.0.0",  # Keras with TensorFlow backend
    "matplotlib>=3.3.0,<4.0.0",  # Plotting
    "tqdm>=4.50.0,<5.0.0",  # Progress bars
    "scikit-learn>=0.24.0,<1.4.0",  # ML utilities
    "wandb",  # Experiment tracking
]



